[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Impostor.gd" type="Script" id=1]
[ext_resource path="res://Music/sfx100v2_metal_hit_01.ogg" type="AudioStream" id=3]
[ext_resource path="res://Objects/amongus-white.tscn" type="PackedScene" id=4]

[sub_resource type="SphereShape" id=1]
radius = 0.669791

[sub_resource type="SphereShape" id=2]

[sub_resource type="SphereShape" id=3]

[node name="Impostor" type="KinematicBody"]
script = ExtResource( 1 )

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1 )
light_color = Color( 1, 0, 0, 1 )
shadow_enabled = true
omni_attenuation = 0.554785

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1.49397, 0, 0.00507315, 0, 1.89162, 0, 0.00507308, 0, 1.40051, 0, -0.228271, 0 )
shape = SubResource( 1 )

[node name="Model" parent="." instance=ExtResource( 4 )]
transform = Transform( -1.62921e-07, 0, -1, 0, 1, 0, 1, 0, -1.62921e-07, 0, 0, 0 )

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 3 )
unit_db = 1.0
unit_size = 1.4
autoplay = true
max_distance = 50.0

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="RayCast" type="RayCast" parent="."]
transform = Transform( 1.7, 0, 0, 0, 1.7, 0, 0, 0, 1.7, 0, -1.3655, 1 )
enabled = true
cast_to = Vector3( 0, 0, 10 )

[node name="GameOverArea" type="Area" parent="."]
transform = Transform( 1.7, 0, 0, 0, 1.7, 0, 0, 0, 1.7, 0, 0, 1 )

[node name="CollisionShape" type="CollisionShape" parent="GameOverArea"]
transform = Transform( 0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, 0, 0, 0 )
shape = SubResource( 2 )

[node name="Area" type="Area" parent="."]
transform = Transform( 1.7, 0, 0, 0, 1.7, 0, 0, 0, 1.7, 0, 0, 1 )

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 4.9, 0, 0, 0, 4.9, 0, 0, 0, 4.9, 0, 0, 5 )
shape = SubResource( 3 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="GameOverArea" to="." method="_on_GameOverArea_body_entered"]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
